--- a/app/views/contacts/create.js.erb
+++ b/app/views/contacts/create.js.erb
@@ -1,6 +1,6 @@
 $('.<%= @contact.form %>-form').replaceWith('<%= j render "contacts/shared/#{form_partial_helper(@contact.form)}" %>')
 $('.<%= @contact.form %>-form input[type="text"], textarea').val('');
 
-<% if @contact.form == 'callback' || @contact.form == 'download' %>
+<% if @contact.form == 'callback' || @contact.form == 'download' || @contact.form == 'general_download' %>
 resizeColorbox();
 <% end %>
