--- a/app/views/layouts/shared/_head.html.erb
+++ b/app/views/layouts/shared/_head.html.erb
@@ -40,5 +40,6 @@
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
   ga('create', 'UA-42973420-1', 'lincol-oil.co.uk');
+  ga('set', 'anonymizeIp', true);
   ga('send', 'pageview');
 </script>
