--- a/app/assets/stylesheets/components/navigation.scss
+++ b/app/assets/stylesheets/components/navigation.scss
@@ -185,7 +185,7 @@
 
   a {
     border-right: 1px solid $grey;
-    color: $grey;
+    color: $secondary-background;
     font-size: em(12px);
     padding: 0 em(6px, 12px) 0 0;
   }
